# boxee

./: .cproject.in  .project.in  Makefile.in  Makefile.include.in  README.boxee.osx  README.ce4100  README.linux  README.osx  README.ubuntu  README.win32  bootstrap  boxee-set-initial-resolution  boxee.config.in  boxee.vpj  boxee.vpw  config.guess  configure.in  copying.txt  demo-etc_asound.conf  give_me_my_mouse_back.c  install-pkgs  keep_symbols  language_strings_to_csv.php  run-boxee-desktop.in  run-boxee.in  xbmc-xrandr.c
BOXEE.xcodeproj/: project.pbxproj
UserData/: advancedsettings.xml.in  profiles.xml.in  rtorrent.rc  rtorrent.rc.linux  shortcuts.xml.in.embedded  shortcuts.xml.in.linux  shortcuts.xml.in.osx  shortcuts.xml.in.win  sources.xml.in.diff.appletv  sources.xml.in.diff.embedded  sources.xml.in.diff.linux  sources.xml.in.diff.osx  sources.xml.in.diff.win  sources.xml.in.embedded  sources.xml.in.linux  sources.xml.in.osx  sources.xml.in.win
bin-linux/: boxee-rtorrent
bin-osx/: DcpMonitor  DcpMonitorKill  boxeeservice
canmore/: boxee-ce4100-addons-vxxx.tar.xz  canmore.config  configure.sh  get_boxee_resolution.sh  install_full.sh  install_recovery.sh  kill_boxee.sh  nightly_build.sh  package_targetfs_local-21.sh  run_boxee.sh  (+11 more)
xbmc/lib/libBoxee/tinyxpath/: Makefile  Makefile.am  Makefile.in  action_store.cpp  configure  main.cpp  tokenlist.cpp  xpath_expression.h  xpath_processor.cpp  xpath_stack.cpp  xpath_static.cpp  xpath_stream.cpp  xpath_stream.h  xpath_syntax.cpp
xbmc/lib/opkg/opkg-0.1.8/tests/: Makefile.am  Makefile.in  libopkg_test.c
(+4236 files in other folders)
